# pdf-forensics-toolkit

./: .gitignore  AGENTS.md  CHANGELOG.md  CI_IMPLEMENTATION_SUMMARY.md  CI_TESTING_GUIDE.md  DEV_BRANCH_SETUP.md  PHASE2_COMPLETION.md  README.md  RELEASE.md  compare_pdfs.py  environment.yml  pdf_source_identifier.py  pyproject.toml  tag_push_instructions.txt  verify_signature.py
.github/: VERIFICATION_PIPELINE.md
.github/workflows/: README.md  ci.yml  verify-modifications.yml
pdf_forensics/: __init__.py  __main__.py  cli.py  constants.py  detection.py  limits.py  logging_config.py  reporting.py  scoring.py  signature.py  types.py
scripts/: generate_all_test_fixtures.py  generate_test_fixtures.py  validate_ci.py
tests/: __init__.py  conftest.py  test_cli.py  test_compare_pdfs.py  test_limits.py  test_pdf_source_identifier.py  test_reporting.py  test_signature.py  test_verify_signature.py
tests/golden/: creator_01_adobe_test.json  creator_02_chrome_test.json  creator_03_msword_test.json  creator_04_itext_test.json  creator_05_pdfsharp_test.json  creator_06_libreoffice_test.json  embedded_file_test.json  empty_metadata_test.json  hidden_annotations_test.json  javascript_test.json  launch_action_test.json  modified_test.json  multi_revision_test.json  multipage_test.json  orphan_objects_test.json  shadow_attack_test.json  simple_test.json  uri_action_test.json  with_image_test.json
