[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdf-forensics-toolkit"
dynamic = ["version"]
description = "A comprehensive forensic toolkit for analyzing PDF documents to detect tampering, identify document origins, and assess authenticity."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Rlahuerta"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pymupdf>=1.26.0",
    "pikepdf>=10.0.0",
    "pdfplumber>=0.11.0",
    "pypdf>=6.0.0",
    "pypdf2>=3.0.0",
    "python-magic>=0.4.27",
    "pillow>=12.0.0",
    "pyexiftool>=0.5.0",
    "pdfid>=1.1.0",
    "peepdf-3>=5.0.0",
    "pyhanko>=0.32.0",
    "cryptography>=46.0.0",
    "endesive>=2.19.0",
    "reportlab>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
pdf-forensics = "pdf_forensics.cli:main_source_identifier"
verify-pdf-sig = "pdf_forensics.cli:main_verify_signature"
compare-pdfs = "pdf_forensics.cli:main_compare_pdfs"

[project.urls]
Repository = "https://github.com/Rlahuerta/pdf-forensics-toolkit"

[tool.hatch.version]
path = "pdf_forensics/__init__.py"
pattern = '__version__ = "(?P<version>[^"]+)"'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pdf_forensics --cov-report=html --cov-report=term-missing"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["pdf_forensics"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
